Commit login file

--- a/cognizant-intelligent-test-scripter-1.1/Configuration/Global Settings.Properties
+++ b/cognizant-intelligent-test-scripter-1.1/Configuration/Global Settings.Properties
@@ -1,7 +1,7 @@
-#Fri Dec 28 02:53:44 PST 2018
+#Fri Jan 04 02:47:18 PST 2019
 TestRun=true
-ProjectPath=C\:\\CITS\\cognizant-intelligent-test-scripter-1.1-setup\\cognizant-intelligent-test-scripter-1.1\\Projects\\BlockChainCITS
-ProjectName=BlockChainCITS
-Scenario=NewScenario
-TestCase=LoginApplication
+ProjectPath=C\:\\CITS\\cognizant-intelligent-test-scripter-1.1-setup\\cognizant-intelligent-test-scripter-1.1\\Projects\\Test
+ProjectName=Test
+Scenario=Demo
+TestCase=Blockchain_Login
 Browser=Chrome
